add some features